test/libsolidity/syntaxTests/parsing/constant_is_keyword.sol
contract Foo {
	uint constant = 4;
}
// ----
// ParserError 2314: (30-31): Expected identifier but got '='
